tests/snapshots/integration__spec_test__spec_cmd_preferred_exec.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_preferred -f -o A AB C D

STDOUT
argc_arg1=( AB 'C D' )
argc_flag1=1
argc_opt1=A
cmd_preferred AB 'C D'

STDERR


