tests/snapshots/integration__spec_test__spec_cmd_preferred_help.snap
---
source: tests/spec_test.rs
assertion_line: 10
expression: output
---
RUN
spec cmd_preferred -h

STDOUT


STDERR
spec-cmd_preferred
Preferred

USAGE: spec cmd_preferred [OPTIONS] [ARG1]...

ARGS:
  [ARG1]...  A positional arg

OPTIONS:
  -f, --flag1        A flag
  -o, --opt1 <OPT1>  A option
  -h, --help         Print help information


