tests/snapshots/integration__spec_test__spec_cmd_single_dash.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_single_dash -flag1 -opt1 abc

OUTPUT
argc_flag1=1
argc_opt1=abc
argc__args=(  )
argc__fn=cmd_single_dash
cmd_single_dash

