tests/snapshots/integration__spec_test__spec_cmd_single_dash_help.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_single_dash -help

OUTPUT
cat >&2 <<-'EOF' 
Single dashe options

USAGE: spec cmd_single_dash [OPTIONS] [ARG1]...

ARGS:
  [ARG1]...  A positional arg

OPTIONS:
  -f,  -flag1        A flag
  -o,  -opt1 <OPT1>  A option
  -h,  -help         Print help

EOF
exit 0

