tests/snapshots/integration__spec_test__spec_cmd_two_multiple_positionals.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_two_multiple_positionals abc def cjk

OUTPUT
argc_val1=( abc def )
argc_val2=( cjk )
cmd_two_multiple_positionals abc def cjk

