tests/snapshots/integration__spec_test__spec_cmd_two_multiple_positionals2.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_two_multiple_positionals -- abc def cjk

OUTPUT
argc_val1=( abc def )
argc_val2=( cjk )
argc__args=( abc def cjk )
argc__fn=cmd_two_multiple_positionals
cmd_two_multiple_positionals abc def cjk

