tests/snapshots/integration__spec_test__spec_cmd_two_multiple_positionals3.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_two_multiple_positionals abc -- def cjk

OUTPUT
argc_val1=( abc )
argc_val2=( def cjk )
cmd_two_multiple_positionals abc def cjk

