tests/snapshots/integration__spec_test__spec_cmd_with_hyphens.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_with_hyphens foo --hyphen-flag --hyphen-option bar

OUTPUT
argc_hyphen_flag=1
argc_hyphen_option=bar
argc_hyphen_positional=foo
argc__args=( foo )
argc__fn=cmd_with_hyphens
cmd_with_hyphens foo

