tests/snapshots/integration__spec_test__spec_cmd_without_any_arg.snap
---
source: tests/spec_test.rs
assertion_line: 156
expression: output

---
RUN
spec cmd-without-any-arg

STDOUT
argc__call=cmd_without_any_arg

STDERR


