tests/snapshots/integration__spec_test__spec_cmd_without_any_arg2.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_without_any_arg --opt2 foo bar

OUTPUT
argc__args=( --opt2 foo bar )
argc__fn=cmd_without_any_arg
cmd_without_any_arg --opt2 foo bar

