tests/snapshots/integration__spec_test__spec_cmd_without_any_arg_exec_eval.snap
---
source: tests/spec_test.rs
assertion_line: 204
expression: output
---
RUN
spec cmd-without-any-arg foo bar

STDOUT
argc__args=( foo bar )
cmd_without_any_arg foo bar

STDERR


